unpackaged/objects/LiveChatTranscript.object
<CustomObject>
  <fields>
    <fullName>Auto_Matched__c</fullName>
    <description>Will set the value to Yes if the incoming chat was matched automatically with existing contact in SFDC</description>
    <label>Auto Matched</label>
    <type>Picklist</type>
    <valueSet>
      <restricted>true</restricted>
      <valueSetDefinition>
        <value>
          <fullName>Yes</fullName>
        </value>
        <value>
          <fullName>No</fullName>
          <default>true</default>
          <label>No</label>
        </value>
      </valueSetDefinition>
    </valueSet>
  </fields>
  <fields>
    <fullName>Case_assigned__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Case assigned</label>
    <type>Checkbox</type>
  </fields>
  <fields>
    <fullName>Chat_Reason__c</fullName>
    <label>Chat Reason</label>
    <type>Picklist</type>
    <valueSet>
      <controllingField>Case_assigned__c</controllingField>
      <valueSetDefinition>
        <value>
          <fullName>Academy/Loyalty</fullName>
        </value>
        <value>
          <fullName>Account maintenance</fullName>
        </value>
        <value>
          <fullName>Assist with order placement</fullName>
        </value>
        <value>
          <fullName>Backorder follow up</fullName>
        </value>
        <value>
          <fullName>Credit</fullName>
        </value>
        <value>
          <fullName>Customer Complaint</fullName>
        </value>
        <value>
          <fullName>Customer payment</fullName>
        </value>
        <value>
          <fullName>Customer training</fullName>
        </value>
        <value>
          <fullName>General inquiry</fullName>
        </value>
        <value>
          <fullName>Hardware</fullName>
        </value>
        <value>
          <fullName>Information requested</fullName>
        </value>
        <value>
          <fullName>Invoice/Statement</fullName>
        </value>
        <value>
          <fullName>Lead generation/upsell/cross sell</fullName>
        </value>
        <value>
          <fullName>Open case status</fullName>
        </value>
        <value>
          <fullName>Order follow up &amp; tracking</fullName>
        </value>
        <value>
          <fullName>Pickup Service</fullName>
        </value>
        <value>
          <fullName>Place order</fullName>
        </value>
        <value>
          <fullName>Product Info</fullName>
        </value>
        <value>
          <fullName>Quote &amp; Price inquiry </fullName>
        </value>
        <value>
          <fullName>Remote session</fullName>
        </value>
        <value>
          <fullName>Repair</fullName>
        </value>
        <value>
          <fullName>Replacement Order</fullName>
        </value>
        <value>
          <fullName>Return/Exchange</fullName>
        </value>
        <value>
          <fullName>SalesRep Info</fullName>
        </value>
        <value>
          <fullName>Shipping delay notification</fullName>
        </value>
        <value>
          <fullName>Software</fullName>
        </value>
        <value>
          <fullName>Technical support</fullName>
        </value>
        <value>
          <fullName>Transfer</fullName>
        </value>
        <value>
          <fullName>Troubleshooting</fullName>
        </value>
        <value>
          <fullName>Warrantee</fullName>
        </value>
      </valueSetDefinition>
    </valueSet>
  </fields>
  <fields>
    <fullName>Contact_Assigned__c</fullName>
    <description>A workaround to know if the contact is assigned or not. Populated through a process. 

ContactID is not available directly in formula and filter criteria</description>
    <label>Contact Assigned</label>
    <type>Picklist</type>
    <valueSet>
      <restricted>true</restricted>
      <valueSetDefinition>
        <value>
          <fullName>True</fullName>
        </value>
        <value>
          <fullName>False</fullName>
          <default>true</default>
          <label>False</label>
        </value>
      </valueSetDefinition>
    </valueSet>
  </fields>
  <fields>
    <fullName>Visitor_First_Name__c</fullName>
    <label>Visitor First Name</label>
    <length>80</length>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>Visitor_Last_Name__c</fullName>
    <description>Populated with the Last Name from the website backend or prechat form</description>
    <label>Visitor Last Name</label>
    <length>80</length>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>email__c</fullName>
    <description>Populated with the Contact email from the Website backend or Prechat form</description>
    <label>Source Email</label>
    <type>Email</type>
  </fields>
  <listViews>
    <fullName>All_Chat_Transcripts</fullName>
    <columns>Name</columns>
    <columns>CreatedDate</columns>
    <columns>Account</columns>
    <columns>Contact</columns>
    <columns>Case</columns>
    <columns>LiveChatVisitor</columns>
    <columns>StartTime</columns>
    <columns>EndTime</columns>
    <columns>Status</columns>
    <columns>Owner</columns>
    <columns>LiveChatButton</columns>
    <filterScope>Everything</filterScope>
    <label>All Chat Transcripts</label>
    <language>en_US</language>
  </listViews>
  <listViews>
    <fullName>NA_DT_Chat_support_LiveChatTranscript</fullName>
    <filterScope>Queue</filterScope>
    <label>NA: DT Chat support</label>
    <queue>NA_DT_Chat_support</queue>
    <sharedTo>
      <allInternalUsers></allInternalUsers>
    </sharedTo>
  </listViews>
  <listViews>
    <fullName>US_Azento_Agent_LiveChatTranscript</fullName>
    <columns>Name</columns>
    <columns>CreatedDate</columns>
    <columns>Account</columns>
    <columns>Contact</columns>
    <columns>Case</columns>
    <columns>LiveChatVisitor</columns>
    <columns>StartTime</columns>
    <columns>EndTime</columns>
    <columns>Status</columns>
    <filterScope>Queue</filterScope>
    <label>US: Azento Chat Agent</label>
    <queue>US_Azento_Agent</queue>
    <sharedTo>
      <allInternalUsers></allInternalUsers>
    </sharedTo>
  </listViews>
  <sharingModel>Private</sharingModel>
</CustomObject>